--- a/gitproject.html
+++ b/gitproject.html
@@ -65,25 +65,25 @@
         <img src="https://source.unsplash.com/1600x900/?nature,water" width="80%" height="606px">
         <hr>
         <div id="caption">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <hr>
         <img src="https://source.unsplash.com/1600x900/?nature,trees" width="80%" height="606px">
         <hr>
         <div id="caption">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div><hr>
         <img src="https://source.unsplash.com/1600x900/?nature,flowers" width="80%" height="606px">
         <hr> <div id="caption">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div><hr>
         <img src="https://source.unsplash.com/1600x900/?nature,animals" width="80%" height="606px">
         <hr><div id="caption">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div><hr>
         <img src="https://source.unsplash.com/1600x900/?nature,clouds" width="80%" height="606px">
         <hr> <div id="caption">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
     </main>
     <footer id="footer">
