--- a/gitproject.html
+++ b/gitproject.html
@@ -30,42 +30,42 @@
             <h2>My Work</h2>
         </div>
         <hr>
-        <img src="1.jpg" width="80%" height="80%">
+        <img src="https://i.ibb.co/n0fvLnb/1.jpg" width="80%" height="80%">
         <hr>
         <div id="caption">
             <p>A Perfect reflection of sky and mountain in the lake</p>
         </div>
         <hr>
-        <img src="photo_2021-09-07_00-44-11.jpg" width="80%" height="80%">
+        <img src="https://i.ibb.co/dQnm6cz/photo-2021-09-07-00-44-11.jpg" width="80%" height="80%">
         <hr>
         <div id="caption">
 
             <p>A cute little Duckling enjoying at the bank of lake</p>
         </div>
         <hr>
-        <img src="photo_2021-09-07_00-44-24.jpg" width="80%" height="80%">
+        <img src="https://i.ibb.co/gVgTp9m/photo-2021-09-07-00-44-24.jpg" width="80%" height="80%">
         <hr>
         <div id="caption">
             <p>Nainital: Land of Misty Lakes and Mountains</p>
         </div>
         <hr>
-        <img src="photo_2021-09-07_00-44-31.jpg" width="80%" height="80%">
+        <img src="https://i.ibb.co/CWF1xvV/photo-2021-09-07-00-44-31.jpg" width="80%" height="80%">
         <hr>
         <div id="caption">
 
             <p>Animals have come to mean so much in our lives</p>
         </div>
         <hr>
-        <img src="photo_2021-09-07_00-44-37.jpg" width="80%" height="606px">
+        <img src="https://i.ibb.co/3m0nGqf/photo-2021-09-07-00-44-37.jpg" width="80%" height="606px">
         <hr>
         <div id="caption">
-            <p>Fly High: It's Chennai byTheWay</p>
+            <p>Fly High above the clouds</p>
         </div>
         <hr>
         <img src="https://source.unsplash.com/1600x900/?nature,water" width="80%" height="606px">
         <hr>
         <div id="caption">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <hr>
         <img src="https://source.unsplash.com/1600x900/?nature,trees" width="80%" height="606px">
